--- a/yukinoshita/kcdb/kcdb_importer.ipynb
+++ b/yukinoshita/kcdb/kcdb_importer.ipynb
@@ -423,7 +423,7 @@
     "\n",
     "df_ship_detail = pd.merge(df_ship, df_ship_stats, on='id', how='right')\n",
     "df_ship_detail = df_ship_detail.drop(['Unnamed: 0_x', 'Unnamed: 0_y', 'chinese_name', 'stype_name_chinese'], axis=1)\n",
-    "df_ship_detail "
+    "# df_ship_detail "
    ]
   },
   {
@@ -821,7 +821,7 @@
     "df_slotitems_stats['stats'] = df_slotitems_stats['stats'].apply(ast.literal_eval)\n",
     "stats_df = df_slotitems_stats['stats'].apply(pd.Series)\n",
     "df_slotitems_stats = pd.concat([df_slotitems_stats.drop(columns='stats'), stats_df], axis=1)\n",
-    "df_slotitems_stats\n"
+    "# df_slotitems_stats\n"
    ]
   },
   {
